; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_config.c_m_config_cache_set_dispatch_change_cb.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_config.c_m_config_cache_set_dispatch_change_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_config_cache = type { void (i8*)*, i32*, %struct.mp_dispatch_queue* }
%struct.mp_dispatch_queue = type { i32 }

@dispatch_notify = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m_config_cache_set_dispatch_change_cb(%struct.m_config_cache* %0, %struct.mp_dispatch_queue* %1, void (i8*)* %2, i8* %3) #0 {
  %5 = alloca %struct.m_config_cache*, align 8
  %6 = alloca %struct.mp_dispatch_queue*, align 8
  %7 = alloca void (i8*)*, align 8
  %8 = alloca i8*, align 8
  store %struct.m_config_cache* %0, %struct.m_config_cache** %5, align 8
  store %struct.mp_dispatch_queue* %1, %struct.mp_dispatch_queue** %6, align 8
  store void (i8*)* %2, void (i8*)** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %10 = call i32 @m_config_cache_set_wakeup_cb(%struct.m_config_cache* %9, i32* null, %struct.m_config_cache* null)
  %11 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %12 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %11, i32 0, i32 2
  %13 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %12, align 8
  %14 = icmp ne %struct.mp_dispatch_queue* %13, null
  br i1 %14, label %15, label %26

15:                                               ; preds = %4
  %16 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %17 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %16, i32 0, i32 2
  %18 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %17, align 8
  %19 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %20 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %19, i32 0, i32 0
  %21 = load void (i8*)*, void (i8*)** %20, align 8
  %22 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %23 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = call i32 @mp_dispatch_cancel_fn(%struct.mp_dispatch_queue* %18, void (i8*)* %21, i32* %24)
  br label %26

26:                                               ; preds = %15, %4
  %27 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %28 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %27, i32 0, i32 2
  store %struct.mp_dispatch_queue* null, %struct.mp_dispatch_queue** %28, align 8
  %29 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %30 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %29, i32 0, i32 0
  store void (i8*)* null, void (i8*)** %30, align 8
  %31 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %32 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %31, i32 0, i32 1
  store i32* null, i32** %32, align 8
  %33 = load void (i8*)*, void (i8*)** %7, align 8
  %34 = icmp ne void (i8*)* %33, null
  br i1 %34, label %35, label %50

35:                                               ; preds = %26
  %36 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %6, align 8
  %37 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %38 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %37, i32 0, i32 2
  store %struct.mp_dispatch_queue* %36, %struct.mp_dispatch_queue** %38, align 8
  %39 = load void (i8*)*, void (i8*)** %7, align 8
  %40 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %41 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %40, i32 0, i32 0
  store void (i8*)* %39, void (i8*)** %41, align 8
  %42 = load i8*, i8** %8, align 8
  %43 = bitcast i8* %42 to i32*
  %44 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %45 = getelementptr inbounds %struct.m_config_cache, %struct.m_config_cache* %44, i32 0, i32 1
  store i32* %43, i32** %45, align 8
  %46 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %47 = load i32*, i32** @dispatch_notify, align 8
  %48 = load %struct.m_config_cache*, %struct.m_config_cache** %5, align 8
  %49 = call i32 @m_config_cache_set_wakeup_cb(%struct.m_config_cache* %46, i32* %47, %struct.m_config_cache* %48)
  br label %50

50:                                               ; preds = %35, %26
  ret void
}

declare dso_local i32 @m_config_cache_set_wakeup_cb(%struct.m_config_cache*, i32*, %struct.m_config_cache*) #1

declare dso_local i32 @mp_dispatch_cancel_fn(%struct.mp_dispatch_queue*, void (i8*)*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
